Next release
============

- Fixed documentation bug showing invalid test for values from the
  ``matchdict``:  they are stored as attributes of the ``Article``, rather
  than subitems.

- Fixed documentation bug showing wrong environment key for the ``matchdict``
  produced by the matching route.

- Added a workaround for a bug in Python 2.6, 2.6.1, and 2.6.2 having
  to do with a recursion error in the mimetypes module when trying to
  serve static files from Paste's FileApp:
  http://bugs.python.org/issue5853.  Symptom: File
  "/usr/lib/python2.6/mimetypes.py", line 244, in guess_type return
  guess_type(url, strict) RuntimeError: maximum recursion depth
  exceeded.  Thanks to Armin Ronacher for identifying the symptom and
  pointing out a fix.

- Minor edits to tutorials for accuracy based on feedback.

- Declared the Paste and PasteDeploy dependencies.

1.0 (2009-07-05)
================

- Retested and added some content to GAE tutorial.

- Edited "Extending" narrative docs chapter.

- Added "Deleting the Database" section to the "Defining Models"
  chapter of the traversal wiki tutorial.

- Spell checking of narratives and tutorials.

1.0b2 (2009-07-03)
==================

- ``remoteuserauthenticationpolicy`` ZCML directive didn't work
  without an ``environ_key`` directive (didn't match docs).

- Fix ``configure_zcml`` filespec check on Windows.  Previously if an
  absolute filesystem path including a drive letter was passed as
  ``filename`` (or as ``configure_zcml`` in the options dict) to
  ``repoze.bfg.router.make_app``, it would be treated as a
  package:resource_name specification.

- Fix inaccuracies and import errors in bfgwiki (traversal+ZODB) and
  bfgwiki2 (urldispatch+SA) tutorials.

- Use bfgsite index for all tutorial setup.cfg files.

- Full documentation grammar/style/spelling audit.

1.0b1 (2009-07-02)
==================

Features
--------

- Allow a Paste config file (``configure_zcml``) value or an